Package structure adjusted, contents from database can be displayed

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,11 +24,11 @@
             android:background="#FFFFFF"
             android:fitsSystemWindows="true"
             android:orientation="vertical"
-            tools:context=".SettingsActivity"
+            tools:context=".activities.SettingsActivity"
             android:layout_marginTop="?attr/actionBarSize"
             android:weightSum="1">
 
-            <fragment android:name="org.secuso.privacyfriendlypasswordgenerator.SettingsActivity$GeneralPreferenceFragment"
+            <fragment android:name="org.secuso.privacyfriendlypasswordgenerator.activities.SettingsActivity$GeneralPreferenceFragment"
                 android:id="@+id/settings_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
