--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,7 +3,7 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="org.secuso.privacyfriendlypasswordgenerator.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="org.secuso.privacyfriendlypasswordgenerator.activities.SettingsActivity$GeneralPreferenceFragment"
        />
 
 </preference-headers>
