--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -25,9 +25,9 @@
             android:fitsSystemWindows="true"
             android:layout_marginTop="?attr/actionBarSize"
             android:orientation="vertical"
-            tools:context=".HelpActivity"
+            tools:context=".activities.HelpActivity"
             android:weightSum="1">
-            <fragment android:name="org.secuso.privacyfriendlypasswordgenerator.HelpActivity$HelpFragment"
+            <fragment android:name="org.secuso.privacyfriendlypasswordgenerator.activities.HelpActivity$HelpFragment"
                 android:id="@+id/help_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
