--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         app:layout_behavior="org.secuso.privacyfriendlypasswordgenerator.ScrollAwareFABBehavior"
-        android:layout_margin="@dimen/fab_margin" />
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/plus"/>
 
 </android.support.design.widget.CoordinatorLayout>
