--- a/app/src/main/res/layout/card_metadata.xml
+++ b/app/src/main/res/layout/card_metadata.xml
@@ -6,11 +6,12 @@
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
         android:elevation="3dp"
-        android:layout_marginTop="@dimen/card_margin"
+        android:layout_margin="@dimen/card_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:layout_margin="@dimen/card_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -19,21 +20,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DOMAIN"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                style="@style/Base.DialogWindowTitle.AppCompat"/>
 
             <TextView
                 android:id="@+id/lengthTextView"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/domainTextView"
-                android:text="LENGTH: "
-                android:textStyle="bold" />
+                android:text="@string/length" />
 
             <TextView
                 android:id="@+id/length"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:layout_marginTop="5dp"
                 android:layout_below="@+id/domainTextView"
                 android:layout_toEndOf="@+id/lengthTextView"/>
 
@@ -41,15 +43,15 @@
                 android:id="@+id/iterationTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_below="@+id/lengthTextView"
-                android:text="ITERATION:"
-                android:textStyle="bold" />
+                android:text="@string/iteration" />
 
             <TextView
                 android:id="@+id/iteration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:layout_marginTop="5dp"
                 android:layout_below="@+id/lengthTextView"
                 android:layout_toEndOf="@+id/iterationTextView"/>
 
