Update process completed

--- a/app/src/main/res/layout/dialog_update_passwords.xml
+++ b/app/src/main/res/layout/dialog_update_passwords.xml
@@ -9,7 +9,40 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
+        android:layout_marginTop="15dp"
+        android:id="@+id/textViewUpdateMasterpasswordHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/master_password_heading" />
+
+    <EditText
+        android:id="@+id/editTextUpdateMasterpassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"/>
+
+    <TextView
+        android:layout_marginTop="15dp"
+        android:id="@+id/textViewUpdateMasterpasswordDescitption"
+        android:textSize="12sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/master_password_description" />
+
+    <Button
+        android:id="@+id/displayButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_normal"
+        android:text="@string/generate"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
+
+    <TextView
         android:id="@+id/textViewOldPasswordHeading"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/old_password" />
@@ -38,19 +71,4 @@
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/doneUpdateButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackgroundBorderless"
-            android:text="@string/done"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true" />
-
-    </RelativeLayout>
 </LinearLayout>
