--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -7,7 +7,28 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewDomainDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/domain" />
+
+        <TextView
+            android:id="@+id/domainHeadingTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:textStyle="bold"
+            android:layout_toEndOf="@+id/textViewDomainDescription"/>
+
+    </RelativeLayout>
+
     <TextView
+        android:layout_marginTop="15dp"
         android:id="@+id/textViewMasterpasswordHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,16 +49,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/length" />
+            android:text="@string/iteration" />
 
         <TextView
             android:id="@+id/textViewIteration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/textViewIterationHeading"
-            android:text="10"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
@@ -52,6 +72,7 @@
         android:id="@+id/textViewPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/init_password"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -61,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/normal_button"
+        android:background="@drawable/button_normal"
         android:text="@string/generate"
         android:textColor="@color/white"
         android:textSize="20sp" />
