Iterations field changed to numbers only

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -27,6 +27,26 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewIterationHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/iteration" />
+
+        <TextView
+            android:id="@+id/textViewIteration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/textViewIterationHeading"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </RelativeLayout>
+
     <TextView
         android:layout_marginTop="15dp"
         android:id="@+id/textViewMasterpasswordHeading"
@@ -39,27 +59,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/textViewIterationHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/iteration" />
-
-        <TextView
-            android:id="@+id/textViewIteration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/textViewIterationHeading"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
 
     <TextView
         android:id="@+id/textViewMPasswordHeading"
