--- a/app/src/main/res/layout/dialog_update_metadata.xml
+++ b/app/src/main/res/layout/dialog_update_metadata.xml
@@ -87,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:maxLength="4"
+            android:inputType="number"
             android:layout_toEndOf="@+id/textViewIterationHeadingUpdate"/>
 
     </RelativeLayout>
