Iterations added to views restructering of packages

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        app:layout_behavior="org.secuso.privacyfriendlypasswordgenerator.ScrollAwareFABBehavior"
+        app:layout_behavior="org.secuso.privacyfriendlypasswordgenerator.helpers.ScrollAwareFABBehavior"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/plus"/>
 
