--- a/app/src/main/res/layout/card_metadata.xml
+++ b/app/src/main/res/layout/card_metadata.xml
@@ -55,31 +55,30 @@
                 android:layout_below="@+id/lengthTextView"
                 android:layout_toEndOf="@+id/iterationTextView"/>
 
-            <LinearLayout
+                <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true">
+                android:layout_alignParentEnd="true"
+                    android:orientation="vertical"
+                    android:id="@+id/linearLayout2">
 
-                <ImageView
-                    android:id="@+id/hasNumbersImageView"
+                <TextView
+                    android:id="@+id/hasNumbersTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@mipmap/ic_drawer"
-                    android:visibility="invisible"/>
+                    />
 
-                <ImageView
-                    android:id="@+id/hasSymbolsImageView"
+                <TextView
+                    android:id="@+id/hasSymbolsTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@mipmap/ic_drawer"
-                    android:visibility="invisible"/>
+                    />
 
-                <ImageView
-                    android:id="@+id/hasLettersImageView"
+                <TextView
+                    android:id="@+id/hasLettersTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@mipmap/ic_drawer"
-                    android:visibility="invisible"/>
+                    />
 
             </LinearLayout>
 
