--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,13 +2,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="Example Category">
+        android:title="Password Settings">
         <SwitchPreference
-            android:id="@+id/pref_example_switch"
-            android:key="pref_example_switch"
+            android:title="Bind passwords to device"
+            android:id="@+id/pref_binding_switch"
+            android:key="bindToDevice_enabled"
+            android:summary="Create unique passwords per device."
             android:defaultValue="false"/>
-        <Preference android:title="Test Setting"
-            android:summary="Text Summary"/>
+        <SwitchPreference
+            android:title="Copy passwords to clipboard"
+            android:id="@+id/pref_clipboard_switch"
+            android:key="clipboard_enabled"
+            android:summary="Passwords will automatically copied after generation"
+            android:defaultValue="false"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="Metadata">
     </PreferenceCategory>
 
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
