--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,7 @@
         android:checkableBehavior="all">
         <item
             android:id="@+id/nav_example"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/action_main" />
     </group>
 
@@ -12,6 +13,7 @@
         android:checkableBehavior="all">
         <item
             android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_settings"
             android:title="@string/action_settings" />
         <item
             android:id="@+id/nav_help"
