--- a/app/src/main/res/layout/card_metadata.xml
+++ b/app/src/main/res/layout/card_metadata.xml
@@ -25,10 +25,26 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/lengthTextView"
+                android:id="@+id/usernameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/domainTextView"
+                android:layout_marginTop="5dp"
+                android:text="@string/username" />
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/domainTextView"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/usernameTextView" />
+
+            <TextView
+                android:id="@+id/lengthTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/usernameTextView"
                 android:layout_marginTop="5dp"
                 android:text="@string/length" />
 
@@ -36,7 +52,7 @@
                 android:id="@+id/length"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/domainTextView"
+                android:layout_below="@+id/usernameTextView"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/lengthTextView" />
 
