--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,9 +23,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:textStyle="bold"
-            android:layout_toEndOf="@+id/textViewDomainDescription"/>
+            android:layout_toEndOf="@+id/textViewDomainDescription"
+            android:textStyle="bold" />
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewUsernameDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/username" />
+
+        <TextView
+            android:id="@+id/domainUsernameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="@string/placeholder_no_data"
+            android:layout_toEndOf="@+id/textViewUsernameDescription"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -41,24 +62,24 @@
             android:id="@+id/textViewIteration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@+id/textViewIterationHeading"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <TextView
-        android:layout_marginTop="15dp"
         android:id="@+id/textViewMasterpasswordHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:text="@string/master_password_heading" />
 
     <EditText
         android:id="@+id/editTextMasterpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword" />
 
     <TextView
         android:id="@+id/textViewMPasswordHeading"
