--- a/app/src/main/res/layout/dialog_update_passwords.xml
+++ b/app/src/main/res/layout/dialog_update_passwords.xml
@@ -9,25 +9,25 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:layout_marginTop="15dp"
         android:id="@+id/textViewUpdateMasterpasswordHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:text="@string/master_password_heading" />
 
     <EditText
         android:id="@+id/editTextUpdateMasterpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword" />
 
     <TextView
-        android:layout_marginTop="15dp"
         android:id="@+id/textViewUpdateMasterpasswordDescitption"
-        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/master_password_description" />
+        android:layout_marginTop="15dp"
+        android:text="@string/master_password_description"
+        android:textSize="12sp" />
 
     <Button
         android:id="@+id/displayButton"
@@ -39,22 +39,34 @@
         android:textColor="@color/white"
         android:textSize="20sp" />
 
-
     <TextView
         android:id="@+id/textViewOldPasswordHeading"
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="@string/old_password" />
 
-    <TextView
-        android:id="@+id/textViewOldPassword"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/init_password"
-        android:textAlignment="center"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewOldPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/init_password"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ImageButton
+            android:id="@+id/copyOldButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/textViewOldPassword"
+            android:background="@drawable/ic_copy" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/textViewNewPasswordHeading"
@@ -62,13 +74,26 @@
         android:layout_height="wrap_content"
         android:text="@string/new_password" />
 
-    <TextView
-        android:id="@+id/textViewNewPassword"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/init_password"
-        android:textAlignment="center"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewNewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/init_password"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ImageButton
+            android:id="@+id/copyNewButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/textViewNewPassword"
+            android:background="@drawable/ic_copy" />
+    </RelativeLayout>
 
 </LinearLayout>
