OnPrefencesChangeListener for expert mode

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -15,15 +15,15 @@
             android:key="clipboard_enabled"
             android:summary="@string/summary_clipboard"
             android:defaultValue="false"/>
-        <SwitchPreference
-            android:title="Enable Expert Mode"
-            android:id="@+id/pref_enable_expert"
-            android:key="pref_enable_expert"/>
+        <!--<SwitchPreference-->
+            <!--android:title="Enable Expert Mode"-->
+            <!--android:id="@+id/pref_enable_expert"-->
+            <!--android:key="pref_enable_expert"/>-->
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/title_expert_mode"
-        android:dependency="pref_enable_expert">
+        android:title="@string/title_expert_mode">
+        <!--android:dependency="pref_enable_expert">-->
         <Preference
             android:summary="The hash algorithms and number of iterations have a high influence on the time needed for generating the password."/>
 
