--- a/app/src/main/res/layout/dialog_update_metadata.xml
+++ b/app/src/main/res/layout/dialog_update_metadata.xml
@@ -26,7 +26,7 @@
         android:id="@+id/textViewUsernameHeadingUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/username" />
+        android:text="@string/username_optional" />
 
     <EditText
         android:id="@+id/editTextUsernameUpdate"
