The fight with the benchmark is finally won

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -88,6 +88,10 @@
         android:layout_marginTop="16dp"
         android:text="@string/password" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/textViewPassword"
         android:layout_width="match_parent"
@@ -97,11 +101,21 @@
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/generatorButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/button_normal"
         android:text="@string/generate"
         android:textColor="@color/white"
